--- a/client/request.html
+++ b/client/request.html
@@ -11,44 +11,10 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/Features-Boxed.css">
+    <link rel="stylesheet" href="assets/css/fullcalendar/main.css">
     <link rel="stylesheet" href="assets/css/index.css">
-
-    <link href='assets/js/fullcalendar/main.css' rel='stylesheet' />
-    <script src='assets/js/fullcalendar/main.js'></script>
-    <script>
-
-        // FullCalendar.js documentation: https://fullcalendar.io/docs
-        // Date format: YYYY-MM-DD
-
-      document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-            headerToolbar: {
-                left: 'dayGridMonth,timeGridWeek,timeGridDay',
-                center: 'title',
-                right: 'prev,next'
-            },
-
-            // Sample events for the time being
-            events: [
-                {
-                    title: "Cindy's 20th Bluu Anniversary",
-                    start: "2021-03-29",
-                    end: "2021-03-29"
-                },
-                {
-                    title: "Dr. Wei's Awesome Celebration",
-                    start: "2021-03-30",
-                    end: "2021-03-30"
-                }
-            ],
-            eventColor: '#4d1979'
-        });
-        calendar.render();
-      });
-
-    </script>
 </head>
 
 <body id="page-top">
@@ -74,7 +40,6 @@
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
                     <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
                         <ul class="navbar-nav flex-nowrap ml-auto">
-                            <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
                                 <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="d-none d-lg-inline mr-2 text-gray-600 small">Riley Durbin</span><img class="border rounded-circle img-profile" src="assets/img/avatars/Riley-headshot.jpg"></a>
                                     <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Activity log</a>
@@ -85,17 +50,15 @@
                         </ul>
                     </div>
                 </nav>
-                <div class="container" style="margin-bottom: 20px;">
-                    <div class="row">
-                        <div class="col-md-12 text-center d-xl-flex justify-content-xl-center">
-                            <h3 style="color: var(--dark);">Request SuperFrog at Your Event</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 text-center d-xl-flex justify-content-xl-center" style="margin-bottom: 10px;"><a class="btn btn-primary" role="button" style="background: var(--purple);" href="request.html">Request</a></div>
-                    </div>
-                </div>
-                <div id="calendar"></div>
+                <section class="contact-clean" style="margin-bottom: 15px;">
+                    <form method="post">
+                        <h2 class="text-center" style="margin-bottom: 5px;">Event Request Form</h2>
+                        <h5 class="text-center" style="color: var(--gray);margin-bottom: 25px;">Please fill all the information accurately<br></h5>
+                        <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div>
+                        <div class="form-group"><input class="form-control is-invalid" type="email" name="email" placeholder="Email" style="padding-right: 12px;margin-bottom: 15px;"><input class="form-control" type="tel" name="tel" placeholder="Phone" style="margin-bottom: 15px;"><input class="form-control" type="text" name="event-title" placeholder="Event Title" style="margin-bottom: 15px;"><textarea class="form-control" placeholder="Event Description" style="margin-bottom: 15px;" name="event-description"></textarea><label style="margin-bottom: 0px;">Event Date</label><input class="form-control" type="date" style="margin-bottom: 15px;" name="event-date"><label style="margin-bottom: 0px;">Start Time</label><input class="form-control" type="time" style="margin-bottom: 15px;" name="event-start-time"><label style="margin-bottom: 0px;">End Time</label><input class="form-control" type="time" name="event-end-time"><small class="form-text text-danger">Please enter a correct email address.</small></div>
+                        <div class="form-group d-xl-flex justify-content-xl-center"><button class="btn btn-primary" type="submit" style="background: var(--purple) !important;margin-top: 0px;">send </button></div>
+                    </form>
+                </section>
             </div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
@@ -106,7 +69,6 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    
     <script src="assets/js/Bootstrap-DateTime-Picker-1.js"></script>
     <script src="assets/js/Bootstrap-DateTime-Picker-2.js"></script>
     <script src="assets/js/Bootstrap-DateTime-Picker.js"></script>
