--- a/client/register.html
+++ b/client/register.html
@@ -21,7 +21,7 @@
         <div class="card shadow-lg o-hidden border-0 my-5">
             <div class="card-body p-0">
                 <div class="row">
-                    <div class="col-lg-5 d-none d-lg-flex"><img class="img-fluid" src="assets/img/superfrog/superfrog.jpg"></div>
+                    <div class="col-lg-5 d-none d-lg-flex justify-content-center"><img class="d-lg-flex" src="assets/img/superfrog/superfrog.jpg"></div>
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
